Added ping cmd; Fixed chart rerender

--- a/frontend/htdocs/index.html
+++ b/frontend/htdocs/index.html
@@ -23,7 +23,7 @@
           <div class="border-0 mb-4 p-3 shadow bg-body rounded">
             <div class="row">
               <div class="col">
-                <div class="d-flex flex-row">
+                <div class="d-flex flex-row align-items-center">
                   <div class="me-4">
                     <h1 id="controller-name">Controller</h1>
                   </div>
