Fixed reregister and modal

--- a/frontend/htdocs/index.html
+++ b/frontend/htdocs/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onclick="renameController()">Rename</button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#renameModal" onclick="renameController()">Rename</button>
           </div>
         </div>
       </div>
